Projects/proj6/style/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-color: #FDBD03;
    --secondary-color: #000000
}


header {
    width: 100vw;
    position: fixed;
    display: flex;
    justify-content: space-between;
    z-index: 2;

}

.top-box {
    width: 434px;
    height: 18px;
    background-color: var(--primary-color);
}


.whatup-icon {
    margin-top: 2vh;
    margin-left: 65px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--primary-color);
    width: 95px;
    height: 95px;
    border-radius: 100px;
}

.whatup-icon img {
    width: 54px;
    height: 54px;
}

main {
    display: flex;
    flex-direction: column;
}

.container {
    position: relative;
    margin-top: 10vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    z-index: 3;
}

h1 {
    text-align: right;
    font: normal normal 900 66px/97px Heebo;
    margin-top: 68px;
    margin-bottom: 15px;
    color: var(--primary-color);
}

p {
    align-self: flex-end;
    text-align: right;
    font: normal normal normal 20px/29px Heebo;
    letter-spacing: 0px;
    color: #020253;
    max-width: 385px;
}

.space {
    width: 100vw;
    max-width: 138px;
}

.space5 {
    width: 100%;
    max-width: 200px;
    background-color: var(--primary-color);
    height: 18px;
}

.space1 {
    width: 100vw;
    max-width: 181px;
}

.space2 {
    width: 100%;
    max-width: 166px;
}

.space4 {
    min-width: 535px;
}


.box1 {
    width: 854px;
    min-width: 500px;
    text-align: right;
    padding-left: 20px;
}

.box2 {
    transition: all 1s;
    text-align: center;

}


form {
    display: flex;
    flex-direction: column;
}


.row {
    align-items: flex-end;
    display: flex;
    justify-content: space-between;
    gap: 20px;

}

.form-control {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.form-textarea {
    display: flex;
    flex-direction: column;
}


input[type="text"] {
    text-align: right;
    height: 50px;
    background: #E5EEFF 0% 0% no-repeat padding-box;
    border-bottom: 4px solid var(--primary-color);
}


input {
    width: 100%;
    border: 0px solid black;
}

textarea {
    border: 0px solid black;
    width: 100%;
    resize: none;
    background: #E5EEFF 0% 0% no-repeat padding-box;
    height: 143px;
    margin-bottom: 73px;


    border-bottom: 4px solid var(--primary-color);
}

label {
    text-align: right;
    font: normal normal bold 16px/24px Heebo;
    letter-spacing: 0px;
    color: #2C2C2C;

}

input[type="button"] {
    width: 100%;
    max-width: 166px;
    align-self: flex-end;
    border: 0 solid black;
    font: normal normal bold 22px/30px Heebo;
    letter-spacing: 0.33px;
    background: var(--primary-color) 0% 0% no-repeat padding-box;
    height: 50px;

}

.box2 img {
    width: 535px;

}


footer {
    z-index: 4;
    position: fixed;
    bottom: 0;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;

}

svg {
    width: 27px;
    height: 27px;
}


.bottom-box {
    width: 100%;
    min-width: 500px;
    margin-top: 30px;
    height: 18px;
    background: var(--primary-color);
    width: 1062px;
    min-width: 500px;
    text-align: right;

}

.shareiconcontainer {
    display: flex;
}

.bottom-box-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.shareicon {
    margin-left: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 38px;
    width: 95px;
    height: 95px;
    background: var(--primary-color) 0% 0% no-repeat padding-box;
    box-shadow: 0px 3px 6px #00000029;
    border-radius: 100%;
}

@media screen and (max-width: 1130px) {


    .top-box {
        width: 320px;
        height: 10px;
    }

    .space,
    .space1,
    .space2,
    .whatup-icon,
    .whatup-icon img {
        display: none;
    }

    h1,
    p {
        width: 100%;
        display: block;
        text-align: center;
    }

    h1 {
        font: normal normal 900 40px/59px Heebo;
        letter-spacing: 0px;
    }

    p {
        font: normal normal normal 15px/22px Heebo;
    }

    header {
        justify-content: flex-end;
    }

    .container {
        display: flex;
        flex-direction: column-reverse;
        align-items: center;
        margin-top: 5vh;
    }


    .box2 img {
        width: 79px;
    }

    .row {
        display: block;
    }

    .box1 {
        width: unset;
        min-width: 0px;
        text-align: right;
        padding-left: 35px;
        padding-right: 35px;
    }

    input[type="button"] {
        max-width: unset;
        align-self: center
    }

    .bottom-box {
        width: 100%;
        height: 10px;
    }

    input[type="text"] {
        height: 37px;
        margin-bottom: 15px;
    }

    textarea {

        border: 0px solid black;
        width: 100%;
        resize: none;
        background: #E5EEFF 0% 0% no-repeat padding-box;
        height: 106px;
        margin-bottom: 17px;
        border-bottom: 4px solid var(--primary-color);
    }

    label {
        font: normal normal bold 10px/14px Heebo;
    }

    input[type="button"] {
        font: normal normal bold 15px/21px Heebo;
        height: 37px;

    }


    .shareiconcontainer {
        margin: 0 auto;
        width: 100%;
        max-width: 236px;
        display: flex;
        justify-content: space-around;
        /* gap: 30px; */
    }

    .shareicon {
        margin: 0;
        width: 45px;
        height: 45px;
    }

    svg {
        width: 17px;
        height: 17px;
    }




}

